# cuda-render-engine

./: .gitignore  test.py
video_engine/: CMakeLists.txt  README.md  __init__.py  setup.py
video_engine/build_ninja/: CMakeCache.txt
video_engine/build_vs/: CMakeCache.txt  CMakeCache.txt.tmp57e8c
video_engine/examples/: job.json  sample.srt  test_render.py
video_engine/scripts/: build_wheel.sh  build_windows.bat  setup_colab.sh  smoke_test_colab.sh
video_engine/src/bindings/: py_module.cpp
video_engine/src/codec/: FFmpegDecoder.cpp  FFmpegDecoder.h  FFmpegEncoder.cpp  FFmpegEncoder.h
video_engine/src/core/: AssSubtitleRenderer.cpp  AssSubtitleRenderer.h  BlurBoxEffect.cpp  BlurBoxEffect.h  Frame.h  LayerRenderer.h  Logger.cpp  Logger.h  OverlayLayerRenderer.cpp  OverlayLayerRenderer.h  Region.h  RenderEngine.cpp  RenderEngine.h  RenderJob.cpp  RenderJob.h  SrtParser.cpp  SrtParser.h  SubtitleCue.h  SubtitleLayerRenderer.cpp  SubtitleLayerRenderer.h  SubtitleOverlay.h  SubtitleRenderer.cpp  SubtitleRenderer.h  TextBoxRenderer.cpp  TextBoxRenderer.h  WatermarkRenderer.cpp  WatermarkRenderer.h
video_engine/src/core/timeline/: LayerSpec.h  RenderJobAdapter.cpp  RenderJobAdapter.h  Sequence.h
video_engine/src/cuda/: CudaBuffer.cpp  CudaBuffer.h  CudaContext.cpp  CudaContext.h  CudaFrame.cpp  CudaFrame.h  CudaOverlayCompositeEffect.cu  CudaOverlayCompositeEffect.h  CudaSubtitleRectEffect.cu  CudaSubtitleRectEffect.h
